--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -3,13 +3,13 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
-
   "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
